--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <script src="http://www.google.com/jsapi"></script>
 <script>
     google.load("jquery", "1.4.2");
+    window.onload = function() {
+		// Automatically adding the GeoJSON file
+		addLayer( { url: './myshape.json', type:'geojson' })
+    }
 </script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript" src="static/js/places/explore.js"></script>
